# qiskit-addon-sqd

./: .gitignore  .mergify.yml  CITATION.bib  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml
.github/workflows/: citation.yml  docs.yml  lint.yml  release.yml  test_development_versions.yml  test_latest_versions.yml  test_minimum_versions.yml
docs/: conf.py  index.rst  install.rst
docs/apidocs/: index.rst  qiskit_addon_sqd.configuration_recovery.rst  qiskit_addon_sqd.counts.rst  qiskit_addon_sqd.fermion.rst  qiskit_addon_sqd.qubit.rst  qiskit_addon_sqd.rst  qiskit_addon_sqd.subsampling.rst
docs/guides/: add_fermionic_excitations_to_configuration_pool.ipynb  choose_subspace_dimension.ipynb  integrate_dice_solver.ipynb  overview.rst  quickstart.ipynb  select_open_closed_shell.ipynb  use_oo_to_optimize_hamiltonian_basis.ipynb
docs/how_tos/: add_fermionic_excitations_to_configuration_pool.ipynb  benchmark_pauli_projection.ipynb  choose_subspace_dimension.ipynb  index.rst  integrate_dice_solver.ipynb  integrate_fulqrum.ipynb  project_pauli_operators_onto_hilbert_subspaces.ipynb  quickstart-sqd.ipynb  select_open_closed_shell.ipynb  use_oo_to_optimize_hamiltonian_basis.ipynb
docs/tutorials/: 01_chemistry_hamiltonian.ipynb  01_getting_started_fermionic.ipynb  02_fermionic_lattice_hamiltonian.ipynb  02_getting_started_qubit.ipynb  02_qubit_hamiltonian.ipynb  03_pauli_hamiltonian.ipynb  03_qubit_hamiltonian.ipynb  index.rst
python/qiskit_addon_sqd/: configuration_recovery.py  fermion.py  qubit.py  subsampling.py
qiskit_addon_sqd/: __init__.py  configuration_recovery.py  counts.py  fermion.py  qubit.py  subsampling.py
releasenotes/: config.yaml
releasenotes/notes/: add-py313-2c1e4f8a9b6d7e30.yaml  bump-numpy-2-0-7f3c1a9e2b4d6c08.yaml  bump-numpy-scipy-7f3c1a9e2b4d6c08.yaml  depr-bs-mat-to-addr-169444fb9cb41808.yaml  deprecate-addr-526f0c5bf681f739.yaml  divzero-a6090f6555d1c716.yaml  dont-flip-c881f6cd00114cd5.yaml  drop-py39-c3f367bb7c09a0b2.yaml  fix-bitarray-asint-type-f9b12dd406e604b6.yaml  fix-indexing-0c49df940710efde.yaml  fix-pauli-y-projection-sign-6e91d058cd6506bb.yaml  fulqrum-8c940ab7c359ecde.yaml  funcs-removed-23354b2d1ab55b9e.yaml  hamming-kwarg-c73098a4c756453e.yaml  improve-oo-fcfad41b146ecea0.yaml  int-bug-0ca0ac92297b3a9c.yaml  kfs-kwargs-9204dbc91b4961d6.yaml  max_dim-5d783a18cd3d04b8.yaml  no-array2string-efb9b050ca6efc29.yaml  oo-bug-occs-3c348b86ee03857f.yaml  postselect-a548bb0413bb37da.yaml  pyscf-e-de401c79d4469c81.yaml  pyscf-win32-6e4a47d11576aa47.yaml  qubit-solver-upgrade-8129ed248bd5f07c.yaml  run_sqd_fermion-99f3a73a557f4f64.yaml  rust-source-0bf6bb4c61f94f5b.yaml  shift-572e8754fee745f9.yaml  solver-kwargs-49556710c15f645d.yaml  subsample-hamming-76674dbaf6f411c2.yaml  wf-amps-d0fd5b930346adaf.yaml
releasenotes/notes/0.11/: fix-bitarray-asint-type-f9b12dd406e604b6.yaml  run_sqd_fermion-99f3a73a557f4f64.yaml  sci-state-04077d4dac513f07.yaml
releasenotes/notes/0.12/: scistate-save-load-6232def2d6325460.yaml
releasenotes/notes/0.4/: subsample-hamming-76674dbaf6f411c2.yaml
releasenotes/notes/0.5/: hamming-kwarg-c73098a4c756453e.yaml
releasenotes/notes/0.6/: depr-bs-mat-to-addr-169444fb9cb41808.yaml  deprecate-addr-526f0c5bf681f739.yaml  divzero-a6090f6555d1c716.yaml
releasenotes/notes/0.7/: fermion-bug-2b2ed34f979b1321.yaml
releasenotes/notes/0.8/: py39-2afc9d3831209ea8.yaml  rng-620825ec3215e415.yaml
releasenotes/notes/releasenotes/notes/: scistate-release-note-168add8880435ac7.yaml
rust_ext/: Cargo.toml
rust_ext/src/: lib.rs
src/: lib.rs
test/: README.md  test_configuration_recovery.py  test_counts.py  test_fermion.py  test_qubit.py  test_subsampling.py  test_workflow.py
tools/: verify_images.py
